# tendr

./: .gitignore  README.md  app.py  display.ipynb  extractor.py  news.py  news_chen.py  pyproject.toml  requirements.md  sample.py  sentiment_analysis.py  stock_lookup.py
.github/workflows/: python-publish.yml
modules/: extractor.py  news_search.py  sentiment_analysis.py  stock_lookup.py
tests/: test_news_search.py  test_sentiment_analysis.py  test_stock_lookup.py
