[tool.poetry]
name = "tendr"
version = "0.1.0"
description = ""
authors = ["Griffin <60614863+h-griffin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.1"
requests = "^2.23.0"
googlenews = "^1.3.8"
lxml = "^4.5.1"
aylien-apiclient = "^0.7.0"
python-dotenv = "^0.13.0"
alive-progress = "^1.5.1"
jupyterlab = "^2.1.4"
pandas = "^1.0.4"
seaborn = "^0.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
mock = "^4.0.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
